--- a/src/pages/index/PostModalContent.module.scss
+++ b/src/pages/index/PostModalContent.module.scss
@@ -8,15 +8,22 @@
     flex-wrap: wrap;
     justify-content: space-around;
 
+    textarea {
+        width: 100%;
+    }
+
 }
 
 .createPostSubmit {
-    color: #92002f;
+    color: white;
+    background-color: #92002f;
     border: solid 2px;
     border-color: #92002f;
     height: 1.5rem;
     max-width: 25%;
     margin: 7px 0px;
+    border-radius: 10px;
+    border: none;
 }
 
 .createPostForm {
@@ -31,7 +38,7 @@
     display: flex;
     align-items: center;
     text-align: center;
-    justify-content: space-around;
+    justify-content: center;
     padding: 5px 0px;
     
 }
