--- a/src/pages/login/LoginPg.module.scss
+++ b/src/pages/login/LoginPg.module.scss
@@ -86,7 +86,7 @@
       }
 
       .loginButton {
-          font-size: 28px;
+          font-size: 24px;
           position: relative;
           width: 210px;
           top: 20px;
